--- a/src/main/resources/it/unipi/brewathome/accedi.fxml
+++ b/src/main/resources/it/unipi/brewathome/accedi.fxml
@@ -1,37 +1,121 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.shape.*?>
-<?import java.lang.*?>
-<?import java.net.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.geometry.Rectangle2D?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:id="grid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1440.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.brewathome.AccediController">
+  <columnConstraints>
+    <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" percentWidth="10.833" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" percentWidth="5.0" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="33.33" minWidth="10.0" percentWidth="1.667" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" percentWidth="5.0" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="33.33" minWidth="10.0" percentWidth="1.667" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" percentWidth="5.0" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="33.33" minWidth="10.0" percentWidth="1.667" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" percentWidth="5.0" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="33.33" minWidth="10.0" percentWidth="1.667" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" percentWidth="5.0" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="33.33" minWidth="10.0" percentWidth="1.667" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" percentWidth="5.0" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="33.33" minWidth="10.0" percentWidth="1.667" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" percentWidth="5.0" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="33.33" minWidth="10.0" percentWidth="1.667" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" percentWidth="5.0" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="33.33" minWidth="10.0" percentWidth="1.667" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" percentWidth="5.0" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="33.33" minWidth="10.0" percentWidth="1.667" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" percentWidth="5.0" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="33.33" minWidth="10.0" percentWidth="1.667" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" percentWidth="5.0" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="33.33" minWidth="10.0" percentWidth="1.667" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" percentWidth="5.0" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" percentWidth="10.833" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints fillHeight="false" minHeight="10.0" valignment="CENTER" vgrow="SOMETIMES" />
+  </rowConstraints>
    <children>
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="172.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
-      <VBox alignment="TOP_CENTER" layoutX="186.0" layoutY="70.0" prefHeight="260.0" prefWidth="197.0" styleClass="container">
+      <ImageView fitHeight="74.0" fitWidth="565.0" pickOnBounds="true" preserveRatio="true" translateY="-260.0" GridPane.columnIndex="8" GridPane.columnSpan="9">
+         <image>
+            <Image url="@../../../img/logo.png" />
+         </image>
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
+         <viewport>
+            <Rectangle2D />
+         </viewport></ImageView>
+      <VBox alignment="CENTER" spacing="24.0" styleClass="container" GridPane.columnIndex="9" GridPane.columnSpan="7">
+         <padding>
+            <Insets bottom="24.0" left="41.5" right="41.5" top="24.0" />
+         </padding>
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Accedi" />
-            <Group>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Accedi">
+               <font>
+                  <Font size="36.0" />
+               </font></Text>
+            <VBox>
                <children>
-                  <TextField alignment="CENTER" style="-fx-border-color: black;" text="esempio" />
-                  <Label layoutX="16.0" layoutY="-8.0" style="-fx-background-color: white;" text="e-mail">
+                  <Label alignment="CENTER" style="-fx-background-color: white;" text="e-mail" translateX="12.0" translateY="8.0">
+                     <font>
+                        <Font size="12.0" />
+                     </font>
+                     <padding>
+                        <Insets left="4.0" right="4.0" />
+                     </padding>
+                  </Label>
+                  <TextField prefHeight="56.0" promptText="esempio@gmail.com" style="-fx-border-color: black; -fx-view-order: 1;">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                     <padding>
+                        <Insets left="12.0" right="12.0" />
+                     </padding>
+                  </TextField>
+               </children>
+            </VBox>
+            <VBox>
+               <children>
+                  <Label alignment="CENTER" prefWidth="34.0" style="-fx-background-color: white;" text="e-mail" translateX="12.0" translateY="8.0">
                      <font>
                         <Font size="12.0" />
                      </font>
                   </Label>
+                  <TextField alignment="CENTER" prefHeight="56.0" promptText="****" style="-fx-border-color: black; -fx-view-order: 1;">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </TextField>
+                  <Hyperlink text="Password dimenticata?" />
                </children>
-            </Group>
+            </VBox>
+            <Button fx:id="buttonAccedi" alignment="CENTER" mnemonicParsing="false" onAction="#login" prefHeight="40.0" prefWidth="1000.0" text="Accedi" />
+            <Hyperlink text="Non sei registrato? Registrati" />
          </children>
-         <padding>
-            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-         </padding>
       </VBox>
+      <VBox prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: red;" GridPane.columnIndex="15" />
+      <VBox prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: red;" GridPane.columnIndex="13" />
+      <VBox prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: red;" GridPane.columnIndex="7" />
+      <VBox prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: red;" GridPane.columnIndex="17" />
+      <VBox prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: red;" GridPane.columnIndex="11" />
+      <VBox prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: red;" GridPane.columnIndex="9" />
+      <VBox prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: red;" GridPane.columnIndex="1" />
+      <VBox prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: red;" GridPane.columnIndex="3" />
+      <VBox prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: red;" GridPane.columnIndex="5" />
+      <VBox prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: red;" GridPane.columnIndex="19" />
+      <VBox prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: red;" GridPane.columnIndex="21" />
+      <VBox prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: red;" GridPane.columnIndex="23" />
    </children>
-</Pane>
+</GridPane>
