--- a/src/main/resources/it/unipi/brewathome/registrati.fxml
+++ b/src/main/resources/it/unipi/brewathome/registrati.fxml
@@ -21,8 +21,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.brewathome.AccediController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.brewathome.RegistratiController">
    <children>
       <ImageView fitHeight="100.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -34,7 +33,7 @@
       </ImageView>
       <VBox alignment="CENTER" prefWidth="500.0" spacing="24.0" styleClass="container">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Accedi">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Registrati">
                <font>
                   <Font size="36.0" />
                </font>
@@ -71,11 +70,24 @@
                         <Font size="16.0" />
                      </font>
                   </TextField>
-                  <Hyperlink text="Password dimenticata?" />
                </children>
             </VBox>
-            <Button fx:id="buttonAccedi" alignment="CENTER" mnemonicParsing="false" onAction="#login" prefHeight="40.0" prefWidth="1000.0" text="Accedi" />
-            <Hyperlink onAction="#openRegistrati" text="Non sei registrato? Registrati" />
+            <VBox>
+               <children>
+                  <Label alignment="CENTER" prefWidth="34.0" style="-fx-background-color: white;" text="e-mail" translateX="12.0" translateY="8.0">
+                     <font>
+                        <Font size="12.0" />
+                     </font>
+                  </Label>
+                  <TextField alignment="CENTER" prefHeight="56.0" promptText="****" style="-fx-border-color: black; -fx-view-order: 1;">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </TextField>
+               </children>
+            </VBox>
+            <Button fx:id="buttonAccedi" alignment="CENTER" mnemonicParsing="false" onAction="#register" prefHeight="40.0" prefWidth="1000.0" text="Registrati" />
+            <Hyperlink onAction="#openAccedi" text="Hai già un account? Accedi" />
          </children>
          <padding>
             <Insets bottom="24.0" left="41.5" right="41.5" top="24.0" />
