--- a/src/main/resources/it/unipi/brewathome/ricette.fxml
+++ b/src/main/resources/it/unipi/brewathome/ricette.fxml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<GridPane fx:id="grid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="900.0" prefWidth="1440.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.brewathome.RicetteController">
+<GridPane fx:id="grid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="900.0" prefWidth="1440.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.brewathome.RicetteController">
   <columnConstraints>
-    <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" percentWidth="10.833333" />
+    <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" percentWidth="10.833333" />
       <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="100.0" minWidth="10.0" percentWidth="5.0" />
       <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="33.33" minWidth="10.0" percentWidth="1.6777777" />
       <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="100.0" minWidth="10.0" percentWidth="5.0" />
@@ -38,7 +41,10 @@
     <RowConstraints minHeight="10.0" valignment="TOP" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: green;" GridPane.rowIndex="1" />
-      <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: green;" GridPane.columnIndex="24" GridPane.rowIndex="1" />
+      <ScrollPane fx:id="scroll" fitToWidth="true" hbarPolicy="NEVER" GridPane.columnIndex="1" GridPane.columnSpan="23" GridPane.rowIndex="1">
+         <content>
+            <FlowPane fx:id="flow" columnHalignment="CENTER" />
+         </content>
+      </ScrollPane>
    </children>
 </GridPane>
