--- a/src/main/resources/it/unipi/brewathome/accedi.fxml
+++ b/src/main/resources/it/unipi/brewathome/accedi.fxml
@@ -21,8 +21,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.brewathome.AccediController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" styleClass="container" stylesheets="@../../../styles/accedi.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.brewathome.AccediController">
    <children>
       <ImageView fitHeight="100.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -32,7 +31,7 @@
             <Rectangle2D />
          </viewport>
       </ImageView>
-      <VBox alignment="CENTER" prefWidth="500.0" spacing="24.0" styleClass="container">
+      <VBox alignment="CENTER" prefWidth="500.0" spacing="24.0">
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Accedi">
                <font>
@@ -49,7 +48,7 @@
                         <Insets left="4.0" right="4.0" />
                      </padding>
                   </Label>
-                  <TextField prefHeight="56.0" promptText="esempio@gmail.com" style="-fx-border-color: black; -fx-view-order: 1;">
+                  <TextField prefHeight="56.0" promptText="esempio@gmail.com" styleClass="input-text">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -61,12 +60,12 @@
             </VBox>
             <VBox>
                <children>
-                  <Label alignment="CENTER" prefWidth="34.0" style="-fx-background-color: white;" text="e-mail" translateX="12.0" translateY="8.0">
+                  <Label alignment="CENTER" style="-fx-background-color: white;" text="password" translateX="12.0" translateY="8.0">
                      <font>
                         <Font size="12.0" />
                      </font>
                   </Label>
-                  <TextField alignment="CENTER" prefHeight="56.0" promptText="****" style="-fx-border-color: black; -fx-view-order: 1;">
+                  <TextField alignment="CENTER" prefHeight="56.0" promptText="****" styleClass="input-text">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -74,7 +73,7 @@
                   <Hyperlink text="Password dimenticata?" />
                </children>
             </VBox>
-            <Button fx:id="buttonAccedi" alignment="CENTER" mnemonicParsing="false" onAction="#login" prefHeight="40.0" prefWidth="1000.0" text="Accedi" />
+            <Button fx:id="buttonAccedi" alignment="CENTER" mnemonicParsing="false" onAction="#login" prefHeight="40.0" prefWidth="1000.0" styleClass="btn" text="Accedi" />
             <Hyperlink onAction="#openRegistrati" text="Non sei registrato? Registrati" />
          </children>
          <padding>
