Started adding fonts and style accedi.fxml. DatabaseConnector class added.

--- a/src/main/resources/styles/accedi.css
+++ b/src/main/resources/styles/accedi.css
@@ -3,7 +3,7 @@
 }
 
 .input-text {
-    -fx-background-color: 0, 0;
+    -fx-background-color: transparent, transparent;
     -fx-border-color: -md-sys-color-outline;
     -fx-view-order: 1;
     -fx-border-radius: 4;
