--- a/src/main/resources/it/unipi/brewathome/accedi.fxml
+++ b/src/main/resources/it/unipi/brewathome/accedi.fxml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
@@ -14,14 +8,11 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" styleClass="container" stylesheets="@../../../styles/accedi.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.brewathome.AccediController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" styleClass="container" stylesheets="@../../../styles/accedi.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.brewathome.AccediController">
    <children>
       <ImageView fitHeight="100.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -33,14 +24,14 @@
       </ImageView>
       <VBox alignment="CENTER" prefWidth="500.0" spacing="24.0">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Accedi">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="headline-large" text="Accedi">
                <font>
                   <Font size="36.0" />
                </font>
             </Text>
             <VBox>
                <children>
-                  <Label alignment="CENTER" style="-fx-background-color: white;" text="e-mail" translateX="12.0" translateY="8.0">
+                  <Label alignment="CENTER" text="e-mail" translateX="12.0" translateY="8.0">
                      <font>
                         <Font size="12.0" />
                      </font>
@@ -60,7 +51,7 @@
             </VBox>
             <VBox>
                <children>
-                  <Label alignment="CENTER" style="-fx-background-color: white;" text="password" translateX="12.0" translateY="8.0">
+                  <Label alignment="CENTER" text="password" translateX="12.0" translateY="8.0">
                      <font>
                         <Font size="12.0" />
                      </font>
