--- a/src/main/resources/it/unipi/brewathome/accedi.fxml
+++ b/src/main/resources/it/unipi/brewathome/accedi.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
@@ -12,7 +18,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" styleClass="container" stylesheets="@../../../styles/accedi.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.brewathome.AccediController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" styleClass="container" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.brewathome.AccediController">
    <children>
       <ImageView fitHeight="100.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -31,7 +37,7 @@
             </Text>
             <VBox>
                <children>
-                  <Label alignment="CENTER" text="e-mail" translateX="12.0" translateY="8.0">
+                  <Label alignment="CENTER" styleClass="body-small" text="e-mail" translateX="12.0" translateY="8.0">
                      <font>
                         <Font size="12.0" />
                      </font>
@@ -51,7 +57,7 @@
             </VBox>
             <VBox>
                <children>
-                  <Label alignment="CENTER" text="password" translateX="12.0" translateY="8.0">
+                  <Label alignment="CENTER" styleClass="body-small" text="password" translateX="12.0" translateY="8.0">
                      <font>
                         <Font size="12.0" />
                      </font>
@@ -61,11 +67,11 @@
                         <Font size="16.0" />
                      </font>
                   </TextField>
-                  <Hyperlink text="Password dimenticata?" />
+                  <Hyperlink styleClass="body-small" text="Password dimenticata?" />
                </children>
             </VBox>
             <Button fx:id="buttonAccedi" alignment="CENTER" mnemonicParsing="false" onAction="#login" prefHeight="40.0" prefWidth="1000.0" styleClass="btn" text="Accedi" />
-            <Hyperlink onAction="#openRegistrati" text="Non sei registrato? Registrati" />
+            <Hyperlink onAction="#openRegistrati" styleClass="body-small" text="Non sei registrato? Registrati" />
          </children>
          <padding>
             <Insets bottom="24.0" left="41.5" right="41.5" top="24.0" />
