--- a/src/main/resources/it/unipi/brewathome/topBar.fxml
+++ b/src/main/resources/it/unipi/brewathome/topBar.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -8,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="72.0" prefWidth="1440.0" style="-fx-background-color: yellow;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="72.0" prefWidth="1440.0" styleClass="top-bar" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <columnConstraints>
       <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" minWidth="10.0" percentWidth="10.833" prefWidth="100.0" />
       <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" minWidth="10.0" percentWidth="5.0" prefWidth="100.0" />
@@ -48,6 +53,10 @@
       <TextField prefHeight="48.0" prefWidth="590.0" text="cerca" GridPane.columnIndex="7" GridPane.columnSpan="11">
          <font>
             <Font size="16.0" />
-         </font></TextField>
+         </font>
+         <styleClass>
+            <String fx:value="search-box" />
+            <String fx:value="body-small" />
+         </styleClass></TextField>
    </children>
 </GridPane>
