--- a/src/main/resources/it/unipi/brewathome/registrati.fxml
+++ b/src/main/resources/it/unipi/brewathome/registrati.fxml
@@ -33,14 +33,14 @@
       </ImageView>
       <VBox alignment="CENTER" prefWidth="500.0" spacing="24.0" styleClass="container">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Registrati">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="headline-large" text="Registrati">
                <font>
                   <Font size="36.0" />
                </font>
             </Text>
             <VBox>
                <children>
-                  <Label alignment="CENTER" style="-fx-background-color: white;" text="e-mail" translateX="12.0" translateY="8.0">
+                  <Label alignment="CENTER" styleClass="body-small" text="e-mail" translateX="12.0" translateY="8.0">
                      <font>
                         <Font size="12.0" />
                      </font>
@@ -48,46 +48,62 @@
                         <Insets left="4.0" right="4.0" />
                      </padding>
                   </Label>
-                  <TextField prefHeight="56.0" promptText="esempio@gmail.com" style="-fx-border-color: black; -fx-view-order: 1;">
+                  <TextField prefHeight="56.0" promptText="esempio@gmail.com">
                      <font>
                         <Font size="16.0" />
                      </font>
                      <padding>
                         <Insets left="12.0" right="12.0" />
                      </padding>
+                     <styleClass>
+                        <String fx:value="input-text" />
+                        <String fx:value="body-large" />
+                     </styleClass>
                   </TextField>
                </children>
             </VBox>
             <VBox>
                <children>
-                  <Label alignment="CENTER" prefWidth="34.0" style="-fx-background-color: white;" text="e-mail" translateX="12.0" translateY="8.0">
+                  <Label alignment="CENTER" styleClass="body-small" text="password" translateX="12.0" translateY="8.0">
                      <font>
                         <Font size="12.0" />
                      </font>
                   </Label>
-                  <TextField alignment="CENTER" prefHeight="56.0" promptText="****" style="-fx-border-color: black; -fx-view-order: 1;">
+                  <TextField prefHeight="56.0" promptText="****">
                      <font>
                         <Font size="16.0" />
                      </font>
+                     <styleClass>
+                        <String fx:value="input-text" />
+                        <String fx:value="body-large" />
+                     </styleClass>
                   </TextField>
                </children>
             </VBox>
             <VBox>
                <children>
-                  <Label alignment="CENTER" prefWidth="34.0" style="-fx-background-color: white;" text="e-mail" translateX="12.0" translateY="8.0">
+                  <Label alignment="CENTER" styleClass="body-small" text="conferma password" translateX="12.0" translateY="8.0">
                      <font>
                         <Font size="12.0" />
                      </font>
                   </Label>
-                  <TextField alignment="CENTER" prefHeight="56.0" promptText="****" style="-fx-border-color: black; -fx-view-order: 1;">
+                  <TextField prefHeight="56.0" promptText="****">
                      <font>
                         <Font size="16.0" />
                      </font>
+                     <styleClass>
+                        <String fx:value="input-text" />
+                        <String fx:value="body-large" />
+                     </styleClass>
                   </TextField>
                </children>
             </VBox>
-            <Button fx:id="buttonAccedi" alignment="CENTER" mnemonicParsing="false" onAction="#register" prefHeight="40.0" prefWidth="1000.0" text="Registrati" />
-            <Hyperlink onAction="#openAccedi" text="Hai già un account? Accedi" />
+            <Button fx:id="buttonAccedi" alignment="CENTER" mnemonicParsing="false" onAction="#register" prefHeight="40.0" prefWidth="1000.0" text="Registrati">
+               <styleClass>
+                  <String fx:value="btn" />
+                  <String fx:value="label-large" />
+               </styleClass></Button>
+            <Hyperlink onAction="#openAccedi" styleClass="body-small" text="Hai già un account? Accedi" />
          </children>
          <padding>
             <Insets bottom="24.0" left="41.5" right="41.5" top="24.0" />
