--- a/src/main/resources/it/unipi/brewathome/registrati.fxml
+++ b/src/main/resources/it/unipi/brewathome/registrati.fxml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
@@ -14,14 +9,11 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.brewathome.RegistratiController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.brewathome.RegistratiController">
    <children>
       <ImageView fitHeight="100.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -48,7 +40,7 @@
                         <Insets left="4.0" right="4.0" />
                      </padding>
                   </Label>
-                  <TextField prefHeight="56.0" promptText="esempio@gmail.com">
+                  <TextField fx:id="email" prefHeight="56.0" promptText="esempio@gmail.com">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -69,7 +61,7 @@
                         <Font size="12.0" />
                      </font>
                   </Label>
-                  <TextField prefHeight="56.0" promptText="****">
+                  <TextField fx:id="password" prefHeight="56.0" promptText="****">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -87,7 +79,7 @@
                         <Font size="12.0" />
                      </font>
                   </Label>
-                  <TextField prefHeight="56.0" promptText="****">
+                  <TextField fx:id="confirmPassword" prefHeight="56.0" promptText="****">
                      <font>
                         <Font size="16.0" />
                      </font>
