--- a/src/main/resources/it/unipi/brewathome/card_ricetta.fxml
+++ b/src/main/resources/it/unipi/brewathome/card_ricetta.fxml
@@ -1,21 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="192.0" prefWidth="360.0" styleClass="card" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="192.0" prefWidth="360.0" styleClass="card" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="sium" />
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Nome Ricetta">
+         <styleClass>
+            <String fx:value="nome" />
+            <String fx:value="title-large" />
+         </styleClass></Text>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Stile">
+         <styleClass>
+            <String fx:value="title-medium" />
+            <String fx:value="stile" />
+         </styleClass>
+         <VBox.margin>
+            <Insets bottom="12.0" />
+         </VBox.margin>
+      </Text>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="ABV OG FG IBU ">
+         <styleClass>
+            <String fx:value="body-medium" />
+            <String fx:value="parametri" />
+         </styleClass>
+         <VBox.margin>
+            <Insets top="16.0" />
+         </VBox.margin>
+      </Text>
+      <HBox alignment="BOTTOM_RIGHT" spacing="8.0" VBox.vgrow="ALWAYS">
+         <children>
+            <Button mnemonicParsing="false" text="Modifica">
+               <styleClass>
+                  <String fx:value="btn" />
+                  <String fx:value="btn--outlined" />
+               </styleClass></Button>
+            <Button mnemonicParsing="false" styleClass="btn" text="Visualizza" />
+         </children>
+      </HBox>
    </children>
+   <opaqueInsets>
+      <Insets />
+   </opaqueInsets>
+   <padding>
+      <Insets bottom="16.0" left="16.0" right="16.0" top="12.0" />
+   </padding>
 </VBox>
