logger added. database connector and httpconnector refactored.

--- a/src/main/resources/it/unipi/brewathome/registrati.fxml
+++ b/src/main/resources/it/unipi/brewathome/registrati.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.brewathome.RegistratiController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.brewathome.controllers.RegistratiController">
    <children>
       <ImageView fitHeight="100.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true">
          <image>
