--- a/src/main/resources/it/unipi/brewathome/topBar.fxml
+++ b/src/main/resources/it/unipi/brewathome/topBar.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="72.0" prefWidth="1440.0" styleClass="top-bar" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="72.0" prefWidth="1440.0" styleClass="top-bar" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.brewathome.controllers.BarsController">
    <columnConstraints>
       <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" minWidth="10.0" percentWidth="10.833" prefWidth="100.0" />
       <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" minWidth="10.0" percentWidth="5.0" prefWidth="100.0" />
