--- a/src/main/resources/it/unipi/brewathome/aggiungi_fermentabile.fxml
+++ b/src/main/resources/it/unipi/brewathome/aggiungi_fermentabile.fxml
@@ -1,33 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="552.0" prefWidth="551.0" spacing="20.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="551.0" spacing="20.0" styleClass="container" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.brewathome.controllers.FermentabileController">
    <children>
-      <AnchorPane>
-         <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="headline-medium" text="Modifica fermentabile" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-            <Button alignment="CENTER_RIGHT" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--standard" AnchorPane.rightAnchor="0.0">
-               <graphic>
-                  <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../img/close_24px.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-         </children>
-      </AnchorPane>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="headline-medium" text="Modifica fermentabile" />
       <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="56.0">
          <children>
-            <TextField fx:id="email1" prefHeight="56.0" text="Nome ricetta">
+            <TextField fx:id="fieldQuantita" prefHeight="56.0">
                <font>
                   <Font size="16.0" />
                </font>
@@ -50,13 +40,18 @@
                   <Insets left="17.0" />
                </StackPane.margin>
             </Label>
+            <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="label-small" text="g" translateX="500.0" translateY="28.0">
+               <font>
+                  <Font size="12.0" />
+               </font>
+            </Label>
          </children>
       </StackPane>
       <HBox spacing="16.0">
          <children>
             <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="56.0">
                <children>
-                  <TextField fx:id="email11" prefHeight="56.0" prefWidth="252.0" text="Nome ricetta">
+                  <TextField fx:id="fieldNome" prefHeight="56.0" prefWidth="252.0">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -83,7 +78,7 @@
             </StackPane>
             <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="56.0">
                <children>
-                  <TextField fx:id="email111" prefHeight="56.0" prefWidth="252.0" text="Nome ricetta">
+                  <TextField fx:id="fieldCategoria" prefHeight="56.0" prefWidth="252.0">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -114,7 +109,7 @@
          <children>
             <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="56.0">
                <children>
-                  <TextField fx:id="email111" prefHeight="56.0" prefWidth="252.0" text="Nome ricetta">
+                  <TextField fx:id="fieldFornitore" prefHeight="56.0" prefWidth="252.0">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -141,7 +136,7 @@
             </StackPane>
             <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="56.0">
                <children>
-                  <TextField fx:id="email1111" prefHeight="56.0" prefWidth="252.0" text="Nome ricetta">
+                  <TextField fx:id="fieldProvenienza" prefHeight="56.0" prefWidth="252.0">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -170,7 +165,7 @@
       </HBox>
       <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="56.0">
          <children>
-            <TextField fx:id="email12" maxWidth="200.0" prefHeight="56.0" text="Nome ricetta">
+            <TextField fx:id="fieldTipo" maxWidth="200.0" prefHeight="56.0">
                <font>
                   <Font size="16.0" />
                </font>
@@ -195,6 +190,112 @@
             </Label>
          </children>
       </StackPane>
+      <HBox spacing="16.0">
+         <children>
+            <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="56.0">
+               <children>
+                  <TextField fx:id="fieldColore" prefHeight="56.0" prefWidth="252.0">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                     <padding>
+                        <Insets left="16.0" top="16.0" />
+                     </padding>
+                     <styleClass>
+                        <String fx:value="input-text--filled" />
+                        <String fx:value="body-large" />
+                     </styleClass>
+                     <StackPane.margin>
+                        <Insets />
+                     </StackPane.margin>
+                  </TextField>
+                  <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="body-small" text="Colore" translateY="8.0">
+                     <font>
+                        <Font size="12.0" />
+                     </font>
+                     <StackPane.margin>
+                        <Insets left="17.0" />
+                     </StackPane.margin>
+                  </Label>
+                  <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="label-small" text="IBU" translateX="140.0" translateY="28.0">
+                     <font>
+                        <Font size="12.0" />
+                     </font>
+                  </Label>
+               </children>
+            </StackPane>
+            <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="56.0">
+               <children>
+                  <TextField fx:id="fieldPotenziale" prefHeight="56.0" prefWidth="252.0">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                     <padding>
+                        <Insets left="16.0" top="16.0" />
+                     </padding>
+                     <styleClass>
+                        <String fx:value="input-text--filled" />
+                        <String fx:value="body-large" />
+                     </styleClass>
+                     <StackPane.margin>
+                        <Insets />
+                     </StackPane.margin>
+                  </TextField>
+                  <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="body-small" text="Potenziale" translateY="8.0">
+                     <font>
+                        <Font size="12.0" />
+                     </font>
+                     <StackPane.margin>
+                        <Insets left="17.0" />
+                     </StackPane.margin>
+                  </Label>
+               </children>
+            </StackPane>
+            <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="56.0">
+               <children>
+                  <TextField fx:id="fieldRendimento" prefHeight="56.0" prefWidth="252.0">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                     <padding>
+                        <Insets left="16.0" top="16.0" />
+                     </padding>
+                     <styleClass>
+                        <String fx:value="input-text--filled" />
+                        <String fx:value="body-large" />
+                     </styleClass>
+                     <StackPane.margin>
+                        <Insets />
+                     </StackPane.margin>
+                  </TextField>
+                  <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="body-small" text="Rendimento" translateY="8.0">
+                     <font>
+                        <Font size="12.0" />
+                     </font>
+                     <StackPane.margin>
+                        <Insets left="17.0" />
+                     </StackPane.margin>
+                  </Label>
+               </children>
+            </StackPane>
+         </children>
+      </HBox>
+      <AnchorPane prefHeight="41.0" prefWidth="519.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#annulla" prefHeight="40.0" text="Annulla" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <styleClass>
+                  <String fx:value="label-large" />
+                  <String fx:value="icon_btn--alert" />
+               </styleClass>
+            </Button>
+            <Button layoutX="475.0" mnemonicParsing="false" onAction="#salva" prefHeight="40.0" text="Salva" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <styleClass>
+                  <String fx:value="label-large" />
+                  <String fx:value="icon_btn--positive" />
+               </styleClass>
+            </Button>
+         </children>
+      </AnchorPane>
    </children>
    <padding>
       <Insets bottom="24.0" left="16.0" right="16.0" top="24.0" />
