--- a/src/main/resources/it/unipi/brewathome/modifica_ricetta.fxml
+++ b/src/main/resources/it/unipi/brewathome/modifica_ricetta.fxml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.geometry.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -19,10 +18,13 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane fx:id="grid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="900.0" prefWidth="1440.0" styleClass="grid" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.brewathome.controllers.ModificaRicettaController">
+<GridPane fx:id="grid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="900.0" prefWidth="1440.0" styleClass="grid" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.brewathome.controllers.ModificaRicettaController">
   <columnConstraints>
     <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" percentWidth="10.833333" />
       <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="100.0" minWidth="10.0" percentWidth="5.0" />
@@ -164,6 +166,54 @@
                      </padding>
                   </TextField>
                   <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="body-small" text="Nome" translateY="8.0">
+                     <font>
+                        <Font size="12.0" />
+                     </font>
+                     <StackPane.margin>
+                        <Insets left="17.0" />
+                     </StackPane.margin>
+                  </Label>
+               </children>
+            </StackPane>
+            <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="56.0">
+               <children>
+                  <TextField fx:id="fieldAutore" maxWidth="200.0" onKeyPressed="#aggiornaNome" onKeyTyped="#aggiornaNome" prefHeight="56.0">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                     <styleClass>
+                        <String fx:value="input-text--filled" />
+                        <String fx:value="body-large" />
+                     </styleClass>
+                     <StackPane.margin>
+                        <Insets />
+                     </StackPane.margin>
+                     <padding>
+                        <Insets left="16.0" top="16.0" />
+                     </padding>
+                  </TextField>
+                  <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="body-small" text="Autore" translateY="8.0">
+                     <font>
+                        <Font size="12.0" />
+                     </font>
+                     <StackPane.margin>
+                        <Insets left="17.0" />
+                     </StackPane.margin>
+                  </Label>
+               </children>
+            </StackPane>
+            <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="56.0">
+               <children>
+                  <ChoiceBox fx:id="fieldTipo" maxWidth="200.0" prefHeight="56.0">
+                     <styleClass>
+                        <String fx:value="input-text--filled" />
+                        <String fx:value="body-large" />
+                     </styleClass>
+                     <padding>
+                        <Insets top="16.0" />
+                     </padding>
+                  </ChoiceBox>
+                  <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="body-small" text="Tipo" translateY="8.0">
                      <font>
                         <Font size="12.0" />
                      </font>
