--- a/src/main/resources/it/unipi/brewathome/modifica_ricetta.fxml
+++ b/src/main/resources/it/unipi/brewathome/modifica_ricetta.fxml
@@ -5,7 +5,9 @@
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
@@ -136,16 +138,20 @@
                               <Insets left="16.0" top="12.0" />
                            </padding>
                         </AnchorPane>
-                        <TableView fx:id="tableFermentabili" maxHeight="-Infinity" minHeight="-Infinity" onMouseClicked="#modificaFermentabile" styleClass="table">
+                        <TableView fx:id="tableFermentabili" maxHeight="-Infinity" minHeight="-Infinity" styleClass="table">
                           <columns>
                             <TableColumn fx:id="columnPesoFermentabile" editable="false" prefWidth="75.0" resizable="false" sortable="false" text="Peso" />
                             <TableColumn fx:id="columnNomeFermentabile" editable="false" prefWidth="194.0" resizable="false" sortable="false" text="Nome" />
                               <TableColumn fx:id="columnColore" editable="false" prefWidth="61.0" resizable="false" sortable="false" text="Colore" />
                               <TableColumn fx:id="columnCategoria" editable="false" minWidth="0.0" prefWidth="125.0" resizable="false" sortable="false" text="Categoria" />
                           </columns>
-                           <columnResizePolicy>
-                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy>
+                           <contextMenu>
+                              <ContextMenu>
+                                <items>
+                                  <MenuItem mnemonicParsing="false" onAction="#modificaFermentabile" text="modifica" />
+                                </items>
+                              </ContextMenu>
+                           </contextMenu>
                         </TableView>
                      </children>
                   </VBox>
@@ -176,16 +182,20 @@
                               <Insets left="16.0" top="12.0" />
                            </padding>
                         </AnchorPane>
-                        <TableView fx:id="tableLuppoli" maxHeight="-Infinity" minHeight="-Infinity" onMouseClicked="#modificaLuppolo" styleClass="table">
+                        <TableView fx:id="tableLuppoli" maxHeight="-Infinity" minHeight="-Infinity" styleClass="table">
                            <columns>
                               <TableColumn fx:id="columnPesoLuppolo" editable="false" prefWidth="75.0" resizable="false" sortable="false" text="Peso" />
                               <TableColumn fx:id="columnNomeLuppolo" editable="false" prefWidth="225.0" resizable="false" sortable="false" text="Nome" />
                               <TableColumn fx:id="columnAlpha" editable="false" prefWidth="74.0" resizable="false" sortable="false" text="Alpha" />
                               <TableColumn fx:id="columnTempo" editable="false" minWidth="0.0" prefWidth="81.0" resizable="false" sortable="false" text="Tempo" />
                            </columns>
-                           <columnResizePolicy>
-                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy>
+                           <contextMenu>
+                              <ContextMenu>
+                                <items>
+                                  <MenuItem mnemonicParsing="false" onAction="#modificaLuppolo" text="modifica" />
+                                </items>
+                              </ContextMenu>
+                           </contextMenu>
                         </TableView>
                      </children>
                   </VBox>
@@ -277,7 +287,7 @@
                   <AnchorPane prefHeight="200.0" prefWidth="200.0">
                      <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-small" text="Stile: " AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                        <Button alignment="CENTER_RIGHT" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--standard" AnchorPane.rightAnchor="0.0">
+                        <Button alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#cambiaStile" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--standard" AnchorPane.rightAnchor="0.0">
                            <graphic>
                               <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
