--- a/src/main/resources/styles/global.css
+++ b/src/main/resources/styles/global.css
@@ -34,20 +34,20 @@
     -fx-border-radius: 4 4 0 0;
 }
 
-.choice-box .context-menu { 
+.context-menu { 
     -fx-background-color: -md-sys-color-surface-variant;
 }
 
 .choice-box > .label,
-.choice-box .menu-item > .label {
+.menu-item > .label {
     -fx-background-color: transparent;
 }
 
-.choice-box .menu-item:focused {
+.menu-item:focused {
     -fx-background-color: derive(-md-sys-color-on-surface, 0.92);
 }
 
-.choice-box .menu-item:focused > .label {
+.menu-item:focused > .label {
     -fx-text-fill: black;
     -fx-background-color: transparent;
 }
