--- a/src/main/resources/it/unipi/brewathome/modifica_ricetta.fxml
+++ b/src/main/resources/it/unipi/brewathome/modifica_ricetta.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -65,10 +66,11 @@
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="456.0" minWidth="10.0" percentWidth="48.717949" prefWidth="456.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="306.0" minWidth="10.0" prefWidth="24.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="456.0" minWidth="10.0" prefWidth="454.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="456.0" minWidth="10.0" percentWidth="48.717949" prefWidth="456.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="96.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="-Infinity" minHeight="10.0" valignment="CENTER" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="48.0" valignment="CENTER" vgrow="SOMETIMES" />
                 <RowConstraints fillHeight="false" minHeight="10.0" valignment="TOP" />
                   <RowConstraints minHeight="10.0" valignment="TOP" vgrow="SOMETIMES" />
@@ -110,8 +112,8 @@
                         </HBox>
                      </children>
                   </AnchorPane>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="headline-large" text="Ingredienti" GridPane.rowIndex="1" />
-                  <VBox prefWidth="100.0" styleClass="card" GridPane.rowIndex="2" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="headline-large" text="Ingredienti" GridPane.rowIndex="2" />
+                  <VBox alignment="TOP_CENTER" prefWidth="100.0" styleClass="card" GridPane.rowIndex="3" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
                      <children>
                         <AnchorPane prefHeight="72.0">
                            <children>
@@ -140,10 +142,10 @@
                         </AnchorPane>
                         <TableView fx:id="tableFermentabili" maxHeight="-Infinity" minHeight="-Infinity" styleClass="table">
                           <columns>
-                            <TableColumn fx:id="columnPesoFermentabile" editable="false" prefWidth="75.0" resizable="false" sortable="false" text="Peso" />
-                            <TableColumn fx:id="columnNomeFermentabile" editable="false" prefWidth="194.0" resizable="false" sortable="false" text="Nome" />
-                              <TableColumn fx:id="columnColore" editable="false" prefWidth="61.0" resizable="false" sortable="false" text="Colore" />
-                              <TableColumn fx:id="columnCategoria" editable="false" minWidth="0.0" prefWidth="125.0" resizable="false" sortable="false" text="Categoria" />
+                            <TableColumn fx:id="columnPesoFermentabile" editable="false" minWidth="-1.0" resizable="false" sortable="false" text="Peso" />
+                            <TableColumn fx:id="columnNomeFermentabile" editable="false" minWidth="-1.0" prefWidth="203.0" resizable="false" sortable="false" text="Nome" />
+                              <TableColumn fx:id="columnColore" editable="false" minWidth="-1.0" prefWidth="68.0" resizable="false" sortable="false" text="Colore" />
+                              <TableColumn fx:id="columnCategoria" editable="false" minWidth="-1.0" prefWidth="104.0" resizable="false" sortable="false" text="Categoria" />
                           </columns>
                            <contextMenu>
                               <ContextMenu>
@@ -155,7 +157,7 @@
                         </TableView>
                      </children>
                   </VBox>
-                  <VBox prefWidth="100.0" styleClass="card" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
+                  <VBox prefWidth="100.0" styleClass="card" GridPane.columnIndex="2" GridPane.rowIndex="3" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
                      <children>
                         <AnchorPane prefHeight="72.0">
                            <children>
@@ -184,10 +186,10 @@
                         </AnchorPane>
                         <TableView fx:id="tableLuppoli" maxHeight="-Infinity" minHeight="-Infinity" styleClass="table">
                            <columns>
-                              <TableColumn fx:id="columnPesoLuppolo" editable="false" prefWidth="75.0" resizable="false" sortable="false" text="Peso" />
-                              <TableColumn fx:id="columnNomeLuppolo" editable="false" prefWidth="225.0" resizable="false" sortable="false" text="Nome" />
-                              <TableColumn fx:id="columnAlpha" editable="false" prefWidth="74.0" resizable="false" sortable="false" text="Alpha" />
-                              <TableColumn fx:id="columnTempo" editable="false" minWidth="0.0" prefWidth="81.0" resizable="false" sortable="false" text="Tempo" />
+                              <TableColumn fx:id="columnPesoLuppolo" editable="false" prefWidth="83.0" resizable="false" sortable="false" text="Peso" />
+                              <TableColumn fx:id="columnNomeLuppolo" editable="false" prefWidth="210.0" resizable="false" sortable="false" text="Nome" />
+                              <TableColumn fx:id="columnAlpha" editable="false" prefWidth="76.0" resizable="false" sortable="false" text="Alpha" />
+                              <TableColumn fx:id="columnTempo" editable="false" minWidth="0.0" prefWidth="86.0" resizable="false" sortable="false" text="Tempo" />
                            </columns>
                            <contextMenu>
                               <ContextMenu>
@@ -199,6 +201,27 @@
                         </TableView>
                      </children>
                   </VBox>
+                  <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="112.0" GridPane.rowIndex="1">
+                     <children>
+                        <TextArea fx:id="fieldDescrizione" prefHeight="200.0" prefWidth="509.0">
+                           <styleClass>
+                              <String fx:value="body-large" />
+                              <String fx:value="input-text--filled" />
+                           </styleClass>
+                           <padding>
+                              <Insets left="16.0" top="24.0" />
+                           </padding>
+                        </TextArea>
+                        <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="body-small" text="Descrizione" translateY="8.0">
+                           <font>
+                              <Font size="12.0" />
+                           </font>
+                           <StackPane.margin>
+                              <Insets left="17.0" />
+                           </StackPane.margin>
+                        </Label>
+                     </children>
+                  </StackPane>
                </children>
             </GridPane>
          </content>
@@ -281,12 +304,71 @@
                </children>
             </StackPane>
             <Text fx:id="textUltimaModifica" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="label-large" text="Ultima modifica:" />
+            <HBox alignment="TOP_CENTER" spacing="16.0">
+               <children>
+                  <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="56.0">
+                     <children>
+                        <TextField fx:id="fieldVolume" maxWidth="200.0" onKeyPressed="#aggiornaNome" onKeyTyped="#aggiornaNome" prefHeight="56.0" prefWidth="133.0">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                           <styleClass>
+                              <String fx:value="input-text--filled" />
+                              <String fx:value="body-large" />
+                           </styleClass>
+                           <StackPane.margin>
+                              <Insets />
+                           </StackPane.margin>
+                           <padding>
+                              <Insets left="16.0" top="16.0" />
+                           </padding>
+                        </TextField>
+                        <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="body-small" text="Volume" translateY="8.0">
+                           <font>
+                              <Font size="12.0" />
+                           </font>
+                           <StackPane.margin>
+                              <Insets left="17.0" />
+                           </StackPane.margin>
+                        </Label>
+                     </children>
+                  </StackPane>
+                  <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="56.0">
+                     <children>
+                        <TextField fx:id="fieldRendimento" maxWidth="200.0" onKeyPressed="#aggiornaNome" onKeyTyped="#aggiornaNome" prefHeight="56.0" prefWidth="133.0">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                           <styleClass>
+                              <String fx:value="input-text--filled" />
+                              <String fx:value="body-large" />
+                           </styleClass>
+                           <StackPane.margin>
+                              <Insets />
+                           </StackPane.margin>
+                           <padding>
+                              <Insets left="16.0" top="16.0" />
+                           </padding>
+                        </TextField>
+                        <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="body-small" text="Rendimento" translateY="8.0">
+                           <font>
+                              <Font size="12.0" />
+                           </font>
+                           <StackPane.margin>
+                              <Insets left="17.0" />
+                           </StackPane.margin>
+                        </Label>
+                     </children>
+                  </StackPane>
+               </children>
+            </HBox>
             <VBox prefHeight="200.0" prefWidth="100.0">
                <children>
                   <Separator prefWidth="200.0" />
                   <AnchorPane prefHeight="200.0" prefWidth="200.0">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-small" text="Stile: " AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-small" text="Stile: " AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="8.0" />
+                        <Text fx:id="textStile" layoutX="10.0" layoutY="10.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-small" text="text" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="8.0" />
                         <Button alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#cambiaStile" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--standard" AnchorPane.rightAnchor="0.0">
                            <graphic>
                               <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
@@ -299,7 +381,9 @@
                         <Group>
                            <children>
                               <Rectangle arcHeight="8.0" arcWidth="8.0" fill="#fffbf2" height="26.0" layoutX="42.0" layoutY="55.0" stroke="#7c7767" strokeLineJoin="ROUND" strokeType="INSIDE" width="241.0" />
-                              <Rectangle fill="#9bc624" height="26.0" layoutX="81.0" layoutY="55.0" stroke="#7c7767" strokeLineJoin="ROUND" strokeType="INSIDE" width="163.0" />
+                              <Rectangle fill="#9bc624" height="26.0" layoutX="88.0" layoutY="55.0" stroke="#7c7767" strokeLineJoin="ROUND" strokeType="INSIDE" width="150.0" />
+                              <Rectangle fx:id="actualAbv" arcHeight="5.0" arcWidth="5.0" fill="#c32f18" height="26.0" layoutX="86.0" layoutY="55.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="4.0" />
+                              <Text fx:id="textAbv" layoutX="96.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="\%" />
                            </children>
                         </Group>
                         <Text layoutX="4.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="label-large" text="ABV" />
